log/build_2024-07-31_04-40-51/walldetector/stdout_stderr.log
running egg_info
writing ../../build/walldetector/walldetector.egg-info/PKG-INFO
writing dependency_links to ../../build/walldetector/walldetector.egg-info/dependency_links.txt
writing entry points to ../../build/walldetector/walldetector.egg-info/entry_points.txt
writing requirements to ../../build/walldetector/walldetector.egg-info/requires.txt
writing top-level names to ../../build/walldetector/walldetector.egg-info/top_level.txt
reading manifest file '../../build/walldetector/walldetector.egg-info/SOURCES.txt'
writing manifest file '../../build/walldetector/walldetector.egg-info/SOURCES.txt'
running build
running build_py
copying walldetector/laptime_server.py -> /home/sami/session7/ros2-assignment7/build/walldetector/build/lib/walldetector
running install
running install_lib
copying /home/sami/session7/ros2-assignment7/build/walldetector/build/lib/walldetector/laptime_server.py -> /home/sami/session7/ros2-assignment7/install/walldetector/lib/python3.10/site-packages/walldetector
byte-compiling /home/sami/session7/ros2-assignment7/install/walldetector/lib/python3.10/site-packages/walldetector/laptime_server.py to laptime_server.cpython-310.pyc
  File "/home/sami/session7/ros2-assignment7/install/walldetector/lib/python3.10/site-packages/walldetector/laptime_server.py", line 57
    self.right_distance < self.close_wall_threshold) 
                                                     ^
SyntaxError: expected ':'

running install_data
running install_egg_info
removing '/home/sami/session7/ros2-assignment7/install/walldetector/lib/python3.10/site-packages/walldetector-0.0.0-py3.10.egg-info' (and everything under it)
Copying ../../build/walldetector/walldetector.egg-info to /home/sami/session7/ros2-assignment7/install/walldetector/lib/python3.10/site-packages/walldetector-0.0.0-py3.10.egg-info
running install_scripts
Installing finder script to /home/sami/session7/ros2-assignment7/install/walldetector/lib/walldetector
Installing follower script to /home/sami/session7/ros2-assignment7/install/walldetector/lib/walldetector
Installing laptime_client script to /home/sami/session7/ros2-assignment7/install/walldetector/lib/walldetector
Installing laptime_server script to /home/sami/session7/ros2-assignment7/install/walldetector/lib/walldetector
writing list of installed files to '/home/sami/session7/ros2-assignment7/build/walldetector/install.log'
